--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: CI/CD Compliance Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build-and-check:
@@ -38,15 +38,15 @@ jobs:
       with:
         image-ref: my-compliance-app
 
+    - name: Remove existing gitleaks binary
+      run: |
+        sudo rm -f /usr/local/bin/gitleaks
+
     - name: Install GitLeaks
       run: |
         curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64 -o gitleaks
-        # Check the file type and contents
-        file gitleaks  # This checks the file type
-        ls -l gitleaks  # This shows the file details (permissions, size, etc.)
         chmod +x gitleaks
         sudo mv gitleaks /usr/local/bin/
-        gitleaks --version  # Verify the installation
 
     - name: Run GitLeaks Scan
       run: |
